src/objects/Backlog__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>Backlogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Sprint__c</fullName>
        <description>Closing date of the sprint</description>
        <inlineHelpText>Choose the date of closing sprint</inlineHelpText>
        <label>Stop Sprint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stories_Backlog__c</fullName>
        <label>Stories Backlog</label>
        <summaryForeignKey>Tickets__c.Backlog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stories__c</fullName>
        <label>Stories</label>
        <summaryForeignKey>Tickets__c.Backlog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Storie_Points__c</fullName>
        <label>Total Storie Points</label>
        <summarizedField>Tickets__c.Story_Point__c</summarizedField>
        <summaryFilterItems>
            <field>Tickets__c.Story_Point__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tickets__c.Backlog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Velocity__c</fullName>
        <label>Velocity</label>
        <summarizedField>Tickets__c.Story_Point__c</summarizedField>
        <summaryFilterItems>
            <field>Tickets__c.Status__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tickets__c.Story_Point__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Tickets__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Tickets__c.Backlog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Backlog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Backlog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlogs</pluralLabel>
    <recordTypes>
        <fullName>Backlog_Sprint</fullName>
        <active>true</active>
        <label>Backlog Sprint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Backlog</fullName>
        <active>true</active>
        <label>Product Backlog</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DontAddTicketsStart</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISCHANGED(Stories__c),
 ISBLANK(Start__c)=FALSE
)</errorConditionFormula>
        <errorMessage>You can&apos;t add more tickets because the sprint already started</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StopDate</fullName>
        <active>true</active>
        <description>The Stop date must not be less than the present day</description>
        <errorConditionFormula>Stop_Sprint__c   &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Stop_Sprint__c</errorDisplayField>
        <errorMessage>The Stop date must not be less than the present day</errorMessage>
    </validationRules>
</CustomObject>